fixed overflow problem

--- a/src/app/events/events.component.scss
+++ b/src/app/events/events.component.scss
@@ -1,3 +1,7 @@
 .sebm-google-map-container {
     height: 300px;
 }
+
+.card-block {
+    overflow: hidden;
+}
